--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "bootstrap": "^4.4.1",
     "jQuery.print": "^1.5.1",
     "jquery": "^3.4.1",
     "ng-print": "^1.0.1",
