--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng-print": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "uuid": "^8.3.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
